# jornada-de-dados-aula09-bootcamp-python

./: .flake8  README.md  decorador_inutil.py  etl.py  exemplo_00.py  exemplo_sentry.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  time_decorator.py  utils_log.py
output/: data.csv  data.parquet
