[project]
name = "aula-9"
version = "0.1.0"
description = ""
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.1.2,<8.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
