[project]
name = "aula-9"
version = "0.1.0"
description = ""
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flake8 (>=7.1.2,<8.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sentry-sdk (>=2.24.0,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
